--- a/index.html
+++ b/index.html
@@ -1,23 +1,19 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>▲Ramil's Webiste■</title>
-<style>
-html {
-    background-image: linear-gradient(90deg, #020024 0%, #090979 35%, #00d4ff 100%);
-}
-p {
-    color: white;
-}
-</style>
-</head>
-<body>
+	<head>
+			<title>▲Ramil's Webiste■</title>
+		<link rel="stylesheet" href="Style.css">
+	</head>
+	<body>
 
-<h1 style="color: yellow;">Nur zum Teste</h1>
-<h3>
-<p style="color: green;"><small>Zalli zämme!</small></p>
-<p2 style="color: red;"><strong><i>Wie <span style="border: 1px solid White">gohts</span> euch?</i></strong></p2>
-<p> aegdtssdfgsad</p>
-<iframe src="Test.html" height="200" width="300" title="Suka idi nahuj"></iframe>
-</body>
+		<h1 style="color: yellow; text-align: center;">Nur zum Teste</h1>
+		<h3>
+		<p style="color: rgb(45, 207, 126);"><small>Zalli zämme!</small></p>
+		<p2 style="color: red;"><strong><i>Wie <span style="border: 1px solid White">gohts</span> euch?</i></strong></p2>
+		<p> aegdtssdfgsad</p>
+		<iframe src="Test.html" height="200" width="300" title="Suka idi nahuj"></iframe>
+		<br>
+		<img id="home" src="Speedstest 2.png" alt="TEst" width="600" height="333">
+
+	</body>
 </html>
