--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<p> aegdtssdfgsad</p>
 		<iframe src="Test.html" height="200" width="300" title="Suka idi nahuj"></iframe>
 		<br>
-		<img id="home" src="Speedstest 2.png" alt="TEst" width="600" height="333">
+		<img id="home" src="Speedstest 2.PNG" alt="TEst" width="600" height="333">
 
 	</body>
 </html>
